--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,17 @@
     <string name="content_description_more" />
     <string name="m_s">Más</string>
     <string name="edit">Edit</string>
+        <string-array name="ubicacion">
+            <item>Málaga</item>
+            <item>Sevilla</item>
+            <item>Granada</item>
+            <item>Almeria</item>
+            <item>Huelva</item>
+            <item>Cordoba</item>
+            <item>Cadiz</item>
+            <item>Madrid</item>
+        </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
