--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BottomNavBar</string>
+    <string name="app_name">Aplicacion Proyecto</string>
     <string name="android">Android</string>
     <string name="test">Test</string>
     <string name="editar">Editar</string>
@@ -8,16 +8,45 @@
     <string name="content_description_more" />
     <string name="m_s">Más</string>
     <string name="edit">Edit</string>
-        <string-array name="ubicacion">
-            <item>Málaga</item>
-            <item>Sevilla</item>
-            <item>Granada</item>
-            <item>Almeria</item>
-            <item>Huelva</item>
-            <item>Cordoba</item>
-            <item>Cadiz</item>
-            <item>Madrid</item>
-        </string-array>
+
+    <string-array name="tecnologias">
+        <item>C</item>
+        <item>C+</item>
+        <item>C++</item>
+        <item>C#</item>
+        <item>Java</item>
+        <item>Kotling</item>
+        <item>HTML y CSS</item>
+        <item>Python</item>
+    </string-array>
+
+    <string-array name="idiomas">
+        <item>Español</item>
+        <item>Frances</item>
+        <item>Ingles</item>
+        <item>Aleman</item>
+        <item>Portugues</item>
+        <item>Italiano</item>
+        <item>Chino</item>
+        <item>Japones</item>
+    </string-array>
+
+    <string-array name="tiempo">
+        <item>Dia</item>
+        <item>Mes</item>
+        <item>Año</item>
+    </string-array>
+
+    <string-array name="ubicacion">
+        <item>Málaga</item>
+        <item>Sevilla</item>
+        <item>Granada</item>
+        <item>Almeria</item>
+        <item>Huelva</item>
+        <item>Cordoba</item>
+        <item>Cadiz</item>
+        <item>Madrid</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
